icmbuild example added to examples
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@21 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -998,8 +998,16 @@ The mentioned paths are sugestive only and may be installation dependent:
 \fB/usr/lib/icm-exec\fP: the byte-code interpreter called by \fBicmake\fP;
 
 .PP 
+.SH "EXAMPLES"
+
+.PP 
+The distribution (usually in \fI/usr/share/doc/icmake\fP contains a
+directory \fIexamples\fP containing various examples of \fBicmake\fP script\&. Note in
+particular the \fIexamples/icmbuild\fP subdirectory containing a general script
+for \fBC++\fP and \fBC\fP program maintenance\&.
+.PP 
 .SH "SEE ALSO"
-\fBmake\fP(1)
+\fBicmbuild\fP(1), \fBmake\fP(1)
 .PP 
 .SH "LICENSE"
 This  is free software, distributed under the terms of the `GNU General
