--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -2,7 +2,7 @@
 
 .PP 
 .SH "NAME"
-icmake \- An program maintenance (\fImake\fP) utility using a
+icmake \- A program maintenance (\fImake\fP) utility using a
 \fBC\fP-like grammar
 .PP 
 .SH "SYNOPSIS"
