Preparing upgrade to 7.00
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@860 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.00-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 04 Nov 2006 17:41:32 +0100
+
 icmake (6.30-2) unstable; urgency=medium
 
   * Added patch size_t.dpatch. Thanks Andreas Jochens.
@@ -28,7 +34,7 @@ icmake (6.22-7) unstable; urgency=low
 icmake (6.22-6) unstable; urgency=low
 
   * Added patch:
-  	missing_break.dpatch
+    missing_break.dpatch
     (closes: #266703)
 
  -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 19 Aug 2004 14:56:09 +0200
