--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 icmake (7.00-1) unstable; urgency=low
 
   * New upstream version.
-  
+
+  [ George Danchev ]
   * Added Frank B. Brokken <f.b.brokken@rug.nl> and 
     George Danchev <danchev@spnet.net> to Uploaders
+
+  [ Frank B. Brokken ]
+  * Removed patch-stamp from build-stamp target
+  * Added doc/icmbuild.1 to dh_installman
 
  -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 04 Nov 2006 17:41:32 +0100
 
