added watch file
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@869 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ icmake (7.00-1) unstable; urgency=low
   [ George Danchev ]
   * Added Frank B. Brokken <f.b.brokken@rug.nl> and 
     George Danchev <danchev@spnet.net> to Uploaders
+  * Added debian/watch file
 
   [ Frank B. Brokken ]
   * Removed patch-stamp from build-stamp target
