Added conffiles and modified install/rules: icmbuild and icmstart to /usr/bin
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@871 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/install
+++ b/debian/install
@@ -1,2 +1,3 @@
-bin/icmake bin/icmun usr/bin
-bin/icm-comp bin/icm-exec bin/icm-pp usr/lib/icmake
+bin/icmake bin/icmun scripts/icmbuild scripts/icmstart usr/bin
+icmbuild bin/icm-comp bin/icm-exec bin/icm-pp usr/lib/icmake
+etc/icmake /etc
