added latest changelog entries
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@872 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ icmake (7.00-1) unstable; urgency=low
   [ Frank B. Brokken ]
   * Removed patch-stamp from build-stamp target
   * Added doc/icmbuild.1 to dh_installman
+  * Modified install/rules to install: icmbuild and icmstart to /usr/bin
+  * Added conffiles
 
  -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 04 Nov 2006 17:41:32 +0100
 
