--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,15 @@
-bin/icmake bin/icmun scripts/icmbuild scripts/icmstart usr/bin
-icmbuild bin/icm-comp bin/icm-exec bin/icm-pp usr/lib/icmake
-etc/icmake /etc
+bin/icmake bin/icmun scripts/icmbuild scripts/icmstart  usr/bin
+bin/icm-comp bin/icm-exec bin/icm-pp                    usr/lib/icmake
+etc/icmake/CLASSES
+etc/icmake/icmconf
+etc/icmake/icmstart.rc
+etc/icmake/main.cc
+etc/icmake/main.ih
+etc/icmake/parser/gramspec/grambuild
+etc/icmake/parser/gramspec/header.gr0
+etc/icmake/parser/gramspec/startrule.gr0
+etc/icmake/scanner/lexer
+etc/icmake/scanner/scanner.h
+etc/icmake/scanner/scanner.ih
+etc/icmake/usage.cc
+etc/icmake/version.cc
